--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 <p>Every cookie made at the Kevin Cookie company is crafted with only the best ingredients. Butter from grass fed cows. Unbleached flour with the best flavor and textures. Organic sugar only from India ad phillipines. Eggs from chickens that cry all day. Even our water is special. It comes from the Cascade Mountain springs that we hike up to retrieve. Baking is our passion and we take it very seriously.</p>
 
 
-This is the NEWTEXT branch
+This is the newbranch
 
 We are to push this to github
 
