My first Github push and change

--- a/index.htm
+++ b/index.htm
@@ -11,11 +11,9 @@ I am testing my master branch, business is booming..lol
 
 I am writing this after my first commit with presh
 
-This is the newbranch
+This is the NEWTEXT branch
 
-We are to push this to github
-
-We have now decided to push this to github
+IT ALL GOES TO GITHUB
 
 </body>
 </html>
